<resources>
    <string name="app_name">RamaPrint</string>
    <string name="web">WEB</string>
    <string name="design">DESIGN</string>
    <string name="print">PRINT</string>
    <string name="_3d">3D</string>
    <string name="osa_termosistem">Osa Termosistem</string>
    <string name="reklame_kamioni">Reklame Kamioni</string>
    <string name="nature">Nature</string>
    <string name="contactt" />
    <string name="to">To:</string>
    <string name="email">Email</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="enter_message_here">Enter message heree…</string>
    <string name="dergo">Dergo</string>
    <string name="beje_porosin">Beje Porosin!</string>
    <string name="emri_juaj">Emri juaj...</string>
    <string name="emaili_juaj">Emaili juaj...</string>
    <string name="porosia_juaj">Porosia juaj...</string>
    <string name="title_activity_web">web</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_f">WebF</string>
</resources>
